PoPL-Parser-Project/PythonGrammarParser.py
# Generated from PythonGrammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PythonGrammarParser ( Parser ):

    grammarFileName = "PythonGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'print('", "','", "'*'", 
                     "'='", "'and'", "'or'", "'if'", "':'", "'\nelif'", 
                     "'\nelse:'", "'break'", "'continue'", "'while'", "'for'", 
                     "'in'", "'def'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'True'", "'False'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "TAB", "NEWLINE", "WS", "INT", "FLOAT", "STRING", 
                      "BOOL", "LITERAL", "VARNAME", "ASSIGNMENTOPERATOR", 
                      "ARITHMETICOPERATOR", "SIGNS", "IFELSE", "LIST", "LISTITEM", 
                      "TRUE", "FALSE", "NOT", "CONOPERATORS" ]

    RULE_start = 0
    RULE_expr = 1
    RULE_printRule = 2
    RULE_varitem = 3
    RULE_constatement = 4
    RULE_arguments = 5
    RULE_arithmeticstatement = 6
    RULE_assignment = 7
    RULE_constatements = 8
    RULE_ifstatement = 9
    RULE_elifstatement = 10
    RULE_elsestatement = 11
    RULE_blockstatement = 12
    RULE_whilestatement = 13
    RULE_forloopstatement = 14
    RULE_functionDeclaration = 15
    RULE_functionCall = 16

    ruleNames =  [ "start", "expr", "printRule", "varitem", "constatement", 
                   "arguments", "arithmeticstatement", "assignment", "constatements", 
                   "ifstatement", "elifstatement", "elsestatement", "blockstatement", 
                   "whilestatement", "forloopstatement", "functionDeclaration", 
                   "functionCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    COMMENT=19
    TAB=20
    NEWLINE=21
    WS=22
    INT=23
    FLOAT=24
    STRING=25
    BOOL=26
    LITERAL=27
    VARNAME=28
    ASSIGNMENTOPERATOR=29
    ARITHMETICOPERATOR=30
    SIGNS=31
    IFELSE=32
    LIST=33
    LISTITEM=34
    TRUE=35
    FALSE=36
    NOT=37
    CONOPERATORS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonGrammarParser.ExprContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.NEWLINE)
            else:
                return self.getToken(PythonGrammarParser.NEWLINE, i)

        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.COMMENT)
            else:
                return self.getToken(PythonGrammarParser.COMMENT, i)

        def getRuleIndex(self):
            return PythonGrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = PythonGrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonGrammarParser.T__0) | (1 << PythonGrammarParser.T__2) | (1 << PythonGrammarParser.T__8) | (1 << PythonGrammarParser.T__14) | (1 << PythonGrammarParser.T__15) | (1 << PythonGrammarParser.T__17) | (1 << PythonGrammarParser.COMMENT) | (1 << PythonGrammarParser.NEWLINE) | (1 << PythonGrammarParser.VARNAME))) != 0):
                self.state = 34
                self.expr()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PythonGrammarParser.COMMENT:
                    self.state = 35
                    self.match(PythonGrammarParser.COMMENT)


                self.state = 38
                self.match(PythonGrammarParser.NEWLINE)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(PythonGrammarParser.COMMENT, 0)

        def ifstatement(self):
            return self.getTypedRuleContext(PythonGrammarParser.IfstatementContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonGrammarParser.ExprContext,0)


        def NEWLINE(self):
            return self.getToken(PythonGrammarParser.NEWLINE, 0)

        def printRule(self):
            return self.getTypedRuleContext(PythonGrammarParser.PrintRuleContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PythonGrammarParser.AssignmentContext,0)


        def whilestatement(self):
            return self.getTypedRuleContext(PythonGrammarParser.WhilestatementContext,0)


        def forloopstatement(self):
            return self.getTypedRuleContext(PythonGrammarParser.ForloopstatementContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(PythonGrammarParser.FunctionDeclarationContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(PythonGrammarParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return PythonGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = PythonGrammarParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(PythonGrammarParser.COMMENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.ifstatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.match(PythonGrammarParser.T__0)
                self.state = 48
                self.expr()
                self.state = 49
                self.match(PythonGrammarParser.T__1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.match(PythonGrammarParser.NEWLINE)
                self.state = 52
                self.expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.printRule()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 55
                self.whilestatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 56
                self.forloopstatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 57
                self.functionDeclaration()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 58
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonGrammarParser.ExprContext,0)


        def varitem(self):
            return self.getTypedRuleContext(PythonGrammarParser.VaritemContext,0)


        def getRuleIndex(self):
            return PythonGrammarParser.RULE_printRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintRule" ):
                listener.enterPrintRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintRule" ):
                listener.exitPrintRule(self)




    def printRule(self):

        localctx = PythonGrammarParser.PrintRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_printRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(PythonGrammarParser.T__2)
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonGrammarParser.T__0, PythonGrammarParser.T__2, PythonGrammarParser.T__8, PythonGrammarParser.T__14, PythonGrammarParser.T__15, PythonGrammarParser.T__17, PythonGrammarParser.COMMENT, PythonGrammarParser.NEWLINE, PythonGrammarParser.VARNAME]:
                self.state = 62
                self.expr()
                pass
            elif token in [PythonGrammarParser.INT, PythonGrammarParser.FLOAT, PythonGrammarParser.STRING, PythonGrammarParser.BOOL, PythonGrammarParser.LIST]:
                self.state = 63
                self.varitem()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 66
            self.match(PythonGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VaritemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(PythonGrammarParser.INT, 0)

        def FLOAT(self):
            return self.getToken(PythonGrammarParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(PythonGrammarParser.STRING, 0)

        def BOOL(self):
            return self.getToken(PythonGrammarParser.BOOL, 0)

        def LIST(self):
            return self.getToken(PythonGrammarParser.LIST, 0)

        def getRuleIndex(self):
            return PythonGrammarParser.RULE_varitem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVaritem" ):
                listener.enterVaritem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVaritem" ):
                listener.exitVaritem(self)




    def varitem(self):

        localctx = PythonGrammarParser.VaritemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varitem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonGrammarParser.INT) | (1 << PythonGrammarParser.FLOAT) | (1 << PythonGrammarParser.STRING) | (1 << PythonGrammarParser.BOOL) | (1 << PythonGrammarParser.LIST))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONOPERATORS(self):
            return self.getToken(PythonGrammarParser.CONOPERATORS, 0)

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.VARNAME)
            else:
                return self.getToken(PythonGrammarParser.VARNAME, i)

        def varitem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonGrammarParser.VaritemContext)
            else:
                return self.getTypedRuleContext(PythonGrammarParser.VaritemContext,i)


        def NOT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.NOT)
            else:
                return self.getToken(PythonGrammarParser.NOT, i)

        def getRuleIndex(self):
            return PythonGrammarParser.RULE_constatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstatement" ):
                listener.enterConstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstatement" ):
                listener.exitConstatement(self)




    def constatement(self):

        localctx = PythonGrammarParser.ConstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PythonGrammarParser.NOT:
                self.state = 70
                self.match(PythonGrammarParser.NOT)


            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonGrammarParser.VARNAME]:
                self.state = 73
                self.match(PythonGrammarParser.VARNAME)
                pass
            elif token in [PythonGrammarParser.INT, PythonGrammarParser.FLOAT, PythonGrammarParser.STRING, PythonGrammarParser.BOOL, PythonGrammarParser.LIST]:
                self.state = 74
                self.varitem()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 77
            self.match(PythonGrammarParser.CONOPERATORS)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PythonGrammarParser.NOT:
                self.state = 78
                self.match(PythonGrammarParser.NOT)


            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonGrammarParser.VARNAME]:
                self.state = 81
                self.match(PythonGrammarParser.VARNAME)
                pass
            elif token in [PythonGrammarParser.INT, PythonGrammarParser.FLOAT, PythonGrammarParser.STRING, PythonGrammarParser.BOOL, PythonGrammarParser.LIST]:
                self.state = 82
                self.varitem()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.VARNAME)
            else:
                return self.getToken(PythonGrammarParser.VARNAME, i)

        def getRuleIndex(self):
            return PythonGrammarParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = PythonGrammarParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonGrammarParser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(PythonGrammarParser.VARNAME)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PythonGrammarParser.T__3:
                    self.state = 86
                    self.match(PythonGrammarParser.T__3)
                    self.state = 87
                    self.match(PythonGrammarParser.VARNAME)
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [PythonGrammarParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(PythonGrammarParser.T__4)
                self.state = 94
                self.match(PythonGrammarParser.VARNAME)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARITHMETICOPERATOR(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.ARITHMETICOPERATOR)
            else:
                return self.getToken(PythonGrammarParser.ARITHMETICOPERATOR, i)

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.VARNAME)
            else:
                return self.getToken(PythonGrammarParser.VARNAME, i)

        def varitem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonGrammarParser.VaritemContext)
            else:
                return self.getTypedRuleContext(PythonGrammarParser.VaritemContext,i)


        def getRuleIndex(self):
            return PythonGrammarParser.RULE_arithmeticstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticstatement" ):
                listener.enterArithmeticstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticstatement" ):
                listener.exitArithmeticstatement(self)




    def arithmeticstatement(self):

        localctx = PythonGrammarParser.ArithmeticstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arithmeticstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonGrammarParser.VARNAME]:
                self.state = 97
                self.match(PythonGrammarParser.VARNAME)
                pass
            elif token in [PythonGrammarParser.INT, PythonGrammarParser.FLOAT, PythonGrammarParser.STRING, PythonGrammarParser.BOOL, PythonGrammarParser.LIST]:
                self.state = 98
                self.varitem()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 101
            self.match(PythonGrammarParser.ARITHMETICOPERATOR)
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonGrammarParser.VARNAME]:
                self.state = 102
                self.match(PythonGrammarParser.VARNAME)
                pass
            elif token in [PythonGrammarParser.INT, PythonGrammarParser.FLOAT, PythonGrammarParser.STRING, PythonGrammarParser.BOOL, PythonGrammarParser.LIST]:
                self.state = 103
                self.varitem()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PythonGrammarParser.ARITHMETICOPERATOR:
                self.state = 106
                self.match(PythonGrammarParser.ARITHMETICOPERATOR)
                self.state = 109
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PythonGrammarParser.VARNAME]:
                    self.state = 107
                    self.match(PythonGrammarParser.VARNAME)
                    pass
                elif token in [PythonGrammarParser.INT, PythonGrammarParser.FLOAT, PythonGrammarParser.STRING, PythonGrammarParser.BOOL, PythonGrammarParser.LIST]:
                    self.state = 108
                    self.varitem()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.VARNAME)
            else:
                return self.getToken(PythonGrammarParser.VARNAME, i)

        def ASSIGNMENTOPERATOR(self):
            return self.getToken(PythonGrammarParser.ASSIGNMENTOPERATOR, 0)

        def arithmeticstatement(self):
            return self.getTypedRuleContext(PythonGrammarParser.ArithmeticstatementContext,0)


        def varitem(self):
            return self.getTypedRuleContext(PythonGrammarParser.VaritemContext,0)


        def getRuleIndex(self):
            return PythonGrammarParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PythonGrammarParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(PythonGrammarParser.VARNAME)
            self.state = 117
            _la = self._input.LA(1)
            if not(_la==PythonGrammarParser.T__5 or _la==PythonGrammarParser.ASSIGNMENTOPERATOR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 118
                self.arithmeticstatement()
                pass

            elif la_ == 2:
                self.state = 119
                self.match(PythonGrammarParser.VARNAME)
                pass

            elif la_ == 3:
                self.state = 120
                self.varitem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonGrammarParser.ConstatementContext)
            else:
                return self.getTypedRuleContext(PythonGrammarParser.ConstatementContext,i)


        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.VARNAME)
            else:
                return self.getToken(PythonGrammarParser.VARNAME, i)

        def LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.LITERAL)
            else:
                return self.getToken(PythonGrammarParser.LITERAL, i)

        def NOT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonGrammarParser.NOT)
            else:
                return self.getToken(PythonGrammarParser.NOT, i)

        def getRuleIndex(self):
            return PythonGrammarParser.RULE_constatements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstatements" ):
                listener.enterConstatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstatements" ):
                listener.exitConstatements(self)




    def constatements(self):

        localctx = PythonGrammarParser.ConstatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constatements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.constatement()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PythonGrammarParser.T__6 or _la==PythonGrammarParser.T__7:
                self.state = 124
                _la = self._input.LA(1)
                if not(_la==PythonGrammarParser.T__6 or _la==PythonGrammarParser.T__7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 134
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 125
                    self.constatement()
                    pass

                elif la_ == 2:
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==PythonGrammarParser.NOT:
                        self.state = 126
                        self.match(PythonGrammarParser.NOT)


                    self.state = 129
                    self.match(PythonGrammarParser.VARNAME)
                    pass

                elif la_ == 3:
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==PythonGrammarParser.NOT:
                        self.state = 130
                        self.match(PythonGrammarParser.NOT)


                    self.state = 133
                    self.match(PythonGrammarParser.LITERAL)
                    pass


                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constatements(self):
            return self.getTypedRuleContext(PythonGrammarParser.ConstatementsContext,0)


        def blockstatement(self):
            return self.getTypedRuleContext(PythonGrammarParser.BlockstatementContext,0)


        def elifstatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonGrammarParser.ElifstatementContext)
            else:
                return self.getTypedRuleContext(PythonGrammarParser.ElifstatementContext,i)


        def elsestatement(self):
            return self.getTypedRuleContext(PythonGrammarParser.ElsestatementContext,0)


        def getRuleIndex(self):
            return PythonGrammarParser.RULE_ifstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstatement" ):
                listener.enterIfstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstatement" ):
                listener.exitIfstatement(self)




    def ifstatement(self):

        localctx = PythonGrammarParser.IfstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifstatement)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(PythonGrammarParser.T__8)
                self.state = 142
                self.match(PythonGrammarParser.T__0)
                self.state = 143
                self.constatements()
                self.state = 144
                self.match(PythonGrammarParser.T__1)
                self.state = 145
                self.match(PythonGrammarParser.T__9)
                self.state = 146
                self.blockstatement()
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 147
                        self.elifstatement() 
                    self.state = 152
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

                self.state = 154
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 153
                    self.elsestatement()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(PythonGrammarParser.T__8)
                self.state = 157
                self.constatements()
                self.state = 158
                self.match(PythonGrammarParser.T__9)
                self.state = 159
                self.blockstatement()
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 160
                        self.elifstatement() 
                    self.state = 165
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
